--- a/assets/css/mediaq.css
+++ b/assets/css/mediaq.css
@@ -1,12 +1,14 @@
 @media screen and (min-width:992px) {
 
     aside{
+        margin-top: 68px;
         width: 100px;
-        height: calc(100vh - 52px);
+        height: calc(100vh - 68px);
         font-size: 12px;
     }
     
     #content{
+        margin-top: 68px;
         height: calc(100vh - 68px);
     }
 }
